--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-web": "^0.19.9"
+    "react-native-web": "^0.19.9",
+    "expo-updates": "~0.18.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
